tests/fixtures/errors/heap_key.z
# E0400: a heap-owning value type as a Map key / Set element.
hk: record { s: String }

main: function is {
    m: (Map key: hk value: i64)
    t: (Set of: hk)
    print "x"
}
